VAN-14898: Fixed word wrap and fixed tooltip to left

--- a/vtr-ui/src/app/components/widgets/widget-recover-bad-sectors/widget-recover-bad-sectors.component.scss
+++ b/vtr-ui/src/app/components/widgets/widget-recover-bad-sectors/widget-recover-bad-sectors.component.scss
@@ -17,7 +17,8 @@
 			font-weight: $weight_light;
 			padding-right: 1rem;
 			margin-bottom: 0;
-			word-break: break-all;
+			width: calc(100% - 3rem); // Calculated width based on question mark and padding 
+			word-wrap: break-word;
 		}
 
 		.title-question-mark {
